java-cli-script readme improved